# soliditypp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_CN.md  build.sh  test.sh
libevmasm/: Assembly.cpp  Assembly.h  AssemblyItem.cpp  AssemblyItem.h  CMakeLists.txt  Instruction.cpp  Instruction.h  LinkerObject.cpp  LinkerObject.h
liblangutil/: CMakeLists.txt  Token.h
libsolidity/: CMakeLists.txt
libsolidity/analysis/: ContractLevelChecker.cpp  DeclarationTypeChecker.cpp  GlobalContext.cpp  SolidityppPreReleaseSyntaxChecker.cpp  SolidityppPreReleaseSyntaxChecker.h  SolidityppSyntaxChecker.cpp  SolidityppSyntaxChecker.h  SolidityppTypeChecker.cpp  SolidityppTypeChecker.h  SyntaxChecker.cpp  SyntaxChecker.h  TypeChecker.cpp  TypeChecker.h
libsolidity/ast/: AST.cpp  AST.h  ASTAnnotations.h  ASTEnums.h  ASTForward.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTJsonImporter.cpp  ASTJsonImporter.h  ASTVisitor.h  AST_accept.h  ExperimentalFeatures.h  SolidityppAST.cpp  SolidityppAST.h  SolidityppASTJsonConverter.cpp  SolidityppASTJsonConverter.h  SolidityppAST_accept.h  TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
libsolidity/codegen/: ABIFunctions.cpp  ABIFunctions.h  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  CompilerUtils.cpp  CompilerUtils.h  ContractCompiler.cpp  ContractCompiler.h  ExpressionCompiler.cpp  ExpressionCompiler.h  YulUtilFunctions.cpp  YulUtilFunctions.h
libsolidity/interface/: ABI.cpp  ABI.h  CompilerStack.cpp  CompilerStack.h  StandardCompiler.cpp  StandardCompiler.h  Version.cpp  Version.h
libsolidity/parsing/: Parser.cpp  Parser.h
libsolutil/: Blake2.h  Blake2Impl.h  Blake2bRef.cpp  CMakeLists.txt  CommonData.cpp  CommonData.h  FixedHash.h  FunctionSelector.h
libyul/: CMakeLists.txt
test/: CMakeLists.txt  Common.cpp  ExecutionFramework.h  InteractiveTests.h  ParserTest.cpp  TestCase.cpp  boostTest.cpp  main.cpp
test/contracts/: hello_world.sol  hello_world.solpp  test_address.solpp  test_tokenid.solpp
test/evmc/: CMakeLists.txt
test/interactive/: CMakeLists.txt  isoltest.cpp
test/libsolidity/: AST.cpp  AnalysisFramework.cpp  AnalysisFramework.h  SolidityExpressionCompiler.cpp  SolidityNameAndTypeResolution.cpp  SolidityTypes.cpp
test/libsolutil/: Blake2b.cpp  CommonData.cpp  Keccak256.cpp
test/solidity/: Scanner.cpp  SolidityParser.cpp
test/soliditypp/: ParserTest.cpp  ScannerTest.cpp  SolidityppExpressionCompiler.cpp  SolidityppNameAndTypeResolution.cpp
test/syntax/cross_language/: soliditypp_syntax_in_solidity_source.sol  two_sources.sol
test/syntax/solidity/: deprecated_functions.sol
test/syntax/solidity/functionCalls/: calloptions_duplicated.sol  calloptions_on_delegatecall.sol  calloptions_on_staticcall.sol  calloptions_repeated.sol  invalid_expressions_with_calloptions2.sol  lowlevel_call_options.sol  new_with_calloptions.sol
test/syntax/solidity/memberLookup/: msg_sender_non_payable_transfer.sol
test/syntax/solidity/nameAndTypeResolution/: 053_hash_collision_in_interface.sol  174_address_is_constant.sol  405_address_checksum_type_deduction.sol  406_invalid_address_checksum.sol  407_invalid_address_no_checksum.sol  408_invalid_address_length_short.sol  409_invalid_address_length_long.sol  413_address_methods.sol  466_does_not_error_transfer_payable_fallback.sol  535_address_overload_resolution.sol
test/syntax/solidity/parsing/: modifier.sol  modifier_invocation.sol  var_storage_var.sol
test/syntax/solidity/pragma/: version_check.sol
test/syntax/solidity/scoping/: state_variable_function_conflict_former_crash.sol
test/syntax/solidity/specialFunctions/: functionCallOptions_err.sol  types_with_unspecified_encoding_internal_functions.sol
test/syntax/solidity/types/: byte.sol  strict_explicit.sol
test/syntax/solidity/viewPureChecker/: assembly.sol  builtin_functions.sol  builtin_functions_restrict_warning.sol  builtin_functions_view_fail.sol
test/syntax/solidity_not_support/functionCalls/: invalid_expressions_with_calloptions3.sol  new_with_invalid_calloptions.sol
test/syntax/solidity_not_support/functionTypes/: call_gas_on_function.sol
test/syntax/solidity_not_support/memberLookup/: contract_not_payable_send.sol  msg_sender_non_payable_send.sol  tx_origin_non_payable_send.sol
test/syntax/solidity_not_support/nameAndTypeResolution/: 346_unused_return_value_send.sol  408_invalid_address_length_short.sol  409_invalid_address_length_long.sol  543_warn_about_address_members_on_contract_send.sol  549_warn_about_address_members_on_non_this_contract_send.sol
test/syntax/solidity_not_support/viewPureChecker/: builtin_functions.sol  gas_value_without_call.sol  gas_with_call_nonpayable.sol  staticcall_gas_view.sol
test/syntax/soliditypp/address/: address_in_event.solpp  address_in_function.solpp  address_payable.solpp  address_with_bad_checksum.solpp  good_address.solpp
test/syntax/soliditypp/await/: await.solpp  await_local_variables.solpp  await_no_return_statement.solpp
test/syntax/soliditypp/constructor/: constructor.solpp
test/syntax/soliditypp/function/: async_function.solpp  async_function_call.solpp  async_function_returns.solpp  call_options.solpp  call_options_value.solpp  external_function.solpp  external_sync_function.solpp  free_async_function.solpp  interface_function.solpp  interface_sync_function.solpp  internal_async_function.solpp  internal_function.solpp  library_async_function.solpp  private_async_function.solpp
test/syntax/soliditypp/interface/: interface.solpp  interface_with_offchain.solpp
test/syntax/soliditypp/magic/: account_height.solpp  amount.solpp  balance.solpp  blake2b.solpp  blake2b_literal.solpp  fromhash.solpp  height.solpp  next_random.solpp  prevhash.solpp  random64.solpp  token_id.solpp  transfer.solpp
test/syntax/soliditypp/offchain/: duplicated_functions.solpp  getter.solpp  offchain_function.solpp  offchain_function_same_with_onchain_function.solpp
test/syntax/soliditypp/onmessage/: call_options_deprecated.solpp  hello_world.solpp  message_declaration.solpp  onmessage_payable.solpp  send_message.solpp  (+1 more)
(+41 files in other folders)
