set(ORIGINAL_SOURCE_DIR ${PROJECT_SOURCE_DIR}/solidity/libsolidity)
set(sources
	${ORIGINAL_SOURCE_DIR}/analysis/ConstantEvaluator.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ConstantEvaluator.h
	${ORIGINAL_SOURCE_DIR}/analysis/ContractLevelChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ContractLevelChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowAnalyzer.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowAnalyzer.h
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowBuilder.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowBuilder.h
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowGraph.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ControlFlowGraph.h
	${ORIGINAL_SOURCE_DIR}/analysis/DeclarationContainer.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/DeclarationContainer.h
	${ORIGINAL_SOURCE_DIR}/analysis/DeclarationTypeChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/DeclarationTypeChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/DocStringAnalyser.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/DocStringAnalyser.h
	${ORIGINAL_SOURCE_DIR}/analysis/DocStringTagParser.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/DocStringTagParser.h
	${ORIGINAL_SOURCE_DIR}/analysis/ImmutableValidator.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ImmutableValidator.h
	${ORIGINAL_SOURCE_DIR}/analysis/GlobalContext.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/GlobalContext.h
	${ORIGINAL_SOURCE_DIR}/analysis/NameAndTypeResolver.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/NameAndTypeResolver.h
	${ORIGINAL_SOURCE_DIR}/analysis/OverrideChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/OverrideChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/PostTypeChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/PostTypeChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/ReferencesResolver.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ReferencesResolver.h
	${ORIGINAL_SOURCE_DIR}/analysis/Scoper.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/Scoper.h
	${ORIGINAL_SOURCE_DIR}/analysis/StaticAnalyzer.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/StaticAnalyzer.h
	${ORIGINAL_SOURCE_DIR}/analysis/SyntaxChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/SyntaxChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/TypeChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/TypeChecker.h
	${ORIGINAL_SOURCE_DIR}/analysis/ViewPureChecker.cpp
	${ORIGINAL_SOURCE_DIR}/analysis/ViewPureChecker.h
	${ORIGINAL_SOURCE_DIR}/ast/AST.cpp
	ast/AST.h
	${ORIGINAL_SOURCE_DIR}/ast/AST_accept.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTAnnotations.cpp
	${ORIGINAL_SOURCE_DIR}/ast/ASTAnnotations.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTEnums.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTForward.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTJsonConverter.cpp
	${ORIGINAL_SOURCE_DIR}/ast/ASTJsonConverter.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTUtils.cpp
	${ORIGINAL_SOURCE_DIR}/ast/ASTUtils.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTJsonImporter.cpp
	${ORIGINAL_SOURCE_DIR}/ast/ASTJsonImporter.h
	${ORIGINAL_SOURCE_DIR}/ast/ASTVisitor.h
	${ORIGINAL_SOURCE_DIR}/ast/ExperimentalFeatures.h
	ast/Types.cpp
	${ORIGINAL_SOURCE_DIR}/ast/Types.h
	${ORIGINAL_SOURCE_DIR}/ast/TypeProvider.cpp
	${ORIGINAL_SOURCE_DIR}/ast/TypeProvider.h
	${ORIGINAL_SOURCE_DIR}/codegen/ABIFunctions.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ABIFunctions.h
	${ORIGINAL_SOURCE_DIR}/codegen/ArrayUtils.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ArrayUtils.h
	${ORIGINAL_SOURCE_DIR}/codegen/Compiler.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/Compiler.h
	${ORIGINAL_SOURCE_DIR}/codegen/CompilerContext.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/CompilerContext.h
	${ORIGINAL_SOURCE_DIR}/codegen/CompilerUtils.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/CompilerUtils.h
	${ORIGINAL_SOURCE_DIR}/codegen/ContractCompiler.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ContractCompiler.h
	${ORIGINAL_SOURCE_DIR}/codegen/ExpressionCompiler.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ExpressionCompiler.h
	${ORIGINAL_SOURCE_DIR}/codegen/LValue.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/LValue.h
	${ORIGINAL_SOURCE_DIR}/codegen/MultiUseYulFunctionCollector.h
	${ORIGINAL_SOURCE_DIR}/codegen/MultiUseYulFunctionCollector.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ReturnInfo.h
	${ORIGINAL_SOURCE_DIR}/codegen/ReturnInfo.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/YulUtilFunctions.h
	${ORIGINAL_SOURCE_DIR}/codegen/YulUtilFunctions.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/Common.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/Common.h
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGenerator.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGenerator.h
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGeneratorForStatements.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGeneratorForStatements.h
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGenerationContext.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRGenerationContext.h
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRLValue.h
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRVariable.cpp
	${ORIGINAL_SOURCE_DIR}/codegen/ir/IRVariable.h
	${ORIGINAL_SOURCE_DIR}/formal/ArraySlicePredicate.cpp
	${ORIGINAL_SOURCE_DIR}/formal/ArraySlicePredicate.h
	${ORIGINAL_SOURCE_DIR}/formal/BMC.cpp
	${ORIGINAL_SOURCE_DIR}/formal/BMC.h
	${ORIGINAL_SOURCE_DIR}/formal/CHC.cpp
	${ORIGINAL_SOURCE_DIR}/formal/CHC.h
	${ORIGINAL_SOURCE_DIR}/formal/EncodingContext.cpp
	${ORIGINAL_SOURCE_DIR}/formal/EncodingContext.h
	${ORIGINAL_SOURCE_DIR}/formal/ModelChecker.cpp
	${ORIGINAL_SOURCE_DIR}/formal/ModelChecker.h
	${ORIGINAL_SOURCE_DIR}/formal/ModelCheckerSettings.cpp
	${ORIGINAL_SOURCE_DIR}/formal/ModelCheckerSettings.h
	${ORIGINAL_SOURCE_DIR}/formal/Predicate.cpp
	${ORIGINAL_SOURCE_DIR}/formal/Predicate.h
	${ORIGINAL_SOURCE_DIR}/formal/PredicateInstance.cpp
	${ORIGINAL_SOURCE_DIR}/formal/PredicateInstance.h
	${ORIGINAL_SOURCE_DIR}/formal/PredicateSort.cpp
	${ORIGINAL_SOURCE_DIR}/formal/PredicateSort.h
	${ORIGINAL_SOURCE_DIR}/formal/SMTEncoder.cpp
	${ORIGINAL_SOURCE_DIR}/formal/SMTEncoder.h
	${ORIGINAL_SOURCE_DIR}/formal/SSAVariable.cpp
	${ORIGINAL_SOURCE_DIR}/formal/SSAVariable.h
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicState.cpp
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicState.h
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicTypes.cpp
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicTypes.h
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicVariables.cpp
	${ORIGINAL_SOURCE_DIR}/formal/SymbolicVariables.h
	${ORIGINAL_SOURCE_DIR}/formal/VariableUsage.cpp
	${ORIGINAL_SOURCE_DIR}/formal/VariableUsage.h
	${ORIGINAL_SOURCE_DIR}/interface/ABI.cpp
	${ORIGINAL_SOURCE_DIR}/interface/ABI.h
	${ORIGINAL_SOURCE_DIR}/interface/CompilerStack.cpp
	${ORIGINAL_SOURCE_DIR}/interface/CompilerStack.h
	${ORIGINAL_SOURCE_DIR}/interface/DebugSettings.h
	${ORIGINAL_SOURCE_DIR}/interface/GasEstimator.cpp
	${ORIGINAL_SOURCE_DIR}/interface/GasEstimator.h
	${ORIGINAL_SOURCE_DIR}/interface/Natspec.cpp
	${ORIGINAL_SOURCE_DIR}/interface/Natspec.h
	${ORIGINAL_SOURCE_DIR}/interface/OptimiserSettings.h
	${ORIGINAL_SOURCE_DIR}/interface/ReadFile.h
	${ORIGINAL_SOURCE_DIR}/interface/StandardCompiler.cpp
	${ORIGINAL_SOURCE_DIR}/interface/StandardCompiler.h
	${ORIGINAL_SOURCE_DIR}/interface/StorageLayout.cpp
	${ORIGINAL_SOURCE_DIR}/interface/StorageLayout.h
	${ORIGINAL_SOURCE_DIR}/interface/Version.cpp
	${ORIGINAL_SOURCE_DIR}/interface/Version.h
	${ORIGINAL_SOURCE_DIR}/parsing/DocStringParser.cpp
	${ORIGINAL_SOURCE_DIR}/parsing/DocStringParser.h
	parsing/Parser.cpp
	parsing/Parser.h
	${ORIGINAL_SOURCE_DIR}/parsing/Token.h
)

include_directories(AFTER ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/solidity)

add_library(solidity ${sources})
target_link_libraries(solidity PUBLIC yul evmasm langutil smtutil solutil Boost::boost)
